# investment-adjuster

./: Cargo.toml  README.md  target.yml.example
benches/: bench.rs  fidelity.csv
src/: account.rs  app.rs  backup.rs  cli.rs  lib.rs  main.rs  output.rs  portfolio.rs  provider.rs  target.rs
src/provider/: fidelity.rs  vanguard.rs
tests/: parse.rs
tests/data/: example-portfolio-fidelity.csv  example-portfolio-vanguard.csv
