[package]
name = "investment-adjuster"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
csv = "1.3.1"
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tabled = "0.20.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
