[package]
name = "driftfix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.6.0"
csv = "1.3.1"
derive_more = { version = "2.1.1", features = ["add", "add_assign", "mul", "sum"] }
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tabled = "0.20.0"
thiserror = "2.0.18"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "bench"
harness = false
